Adding build.gradle change

--- a/build.gradle
+++ b/build.gradle
@@ -18,3 +18,9 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+publishing{
+    publications {maven(MavenPublication) {
+        from components.java
+    }}
+}
